change officials layout, change faculty layout and add carousel in the hero section (unfinished)

--- a/ecc_faculty.html
+++ b/ecc_faculty.html
@@ -124,275 +124,237 @@
                 <div class="row gy-4 justify-content-center">
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="ABANTO, ROMMUEL E.">
                     <img src="/assets/img/faculty/ABANTO, ROMMUEL E..JPG" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">ABANTO, ROMMUEL E.</p>
                 </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="ABASOLO, ENRICO F.">
                     <img src="/assets/img/faculty/ABASOLO, ENRICO F.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">ABASOLO, ENRICO F.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="BORJA, MICHAEL">
                     <img src="/assets/img/faculty/BORJA, MICHAEL.JPG" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">BORJA, MICHAEL</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="BULIGAN, MICHAEL N.">
                     <img src="/assets/img/faculty/BULIGAN, MICHAEL N..png" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">BULIGAN, MICHAEL N.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="CARANDANG, YVONNE O.">
                     <img src="/assets/img/faculty/CARANDANG, YVONNE O.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">CARANDANG, YVONNE O.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="CONTRERAS, FLORDELITO B.">
                     <img src="/assets/img/faculty/CONTRERAS, FLORDELITO B.JPG" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">CONTRERAS, FLORDELITO B.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="COO, AGNES N.">
                     <img src="/assets/img/faculty/COO, AGNES N..jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">COO, AGNES N.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="DE LEON, SHIRLEY P.">
                     <img src="/assets/img/faculty/DE LEON, SHIRLEY P.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">DE LEON, SHIRLEY P.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="DELA CRUZ, MARILOU V.">
                     <img src="/assets/img/faculty/DELA CRUZ, MARILOU V.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">DELA CRUZ, MARILOU V.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="DELOS REYES, MA. LEE D.">
                     <img src="/assets/img/faculty/DELOS REYES MA. LEE D.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">DELOS REYES, MA. LEE D.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="DOMINGO, GERLYN M.">
                     <img src="/assets/img/faculty/DOMINGO, GERLYN M.JPG" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">DOMINGO, GERLYN M.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="DUBLADO, ANNA MAE D.">
                     <img src="/assets/img/faculty/DUBLADO, ANNA MAE D.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">DUBLADO, ANNA MAE D.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="DUMPIT, Catherine D.">
                     <img src="/assets/img/faculty/DUMPIT, Catherine D.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">DUMPIT, CATHERINE D.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="EBALLE, MELVIN G.">
                     <img src="/assets/img/faculty/EBALLE, MELVIN G.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">EBALLE, MELVIN G.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="FERRER, FLORENCE B.">
                     <img src="/assets/img/faculty/FERRER, FLORENCE B.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">FERRER, FLORENCE B.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="GONDRA, LYN R.">
                     <img src="/assets/img/faculty/GONDRA, LYN R.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">GONDRA, LYN R.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="GUADES, EUGENE PAOLO Z.">
                     <img src="/assets/img/faculty/Guades, Eugene Paolo Z..jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">GUADES, EUGENE PAOLO Z.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="INTIA, ANDREW D.">
                     <img src="/assets/img/faculty/INTIA, ANDREW D.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">INTIA, ANDREW D.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="LIWANAG, NANCY G.">
                     <img src="/assets/img/faculty/Liwanag, Nancy G.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">LIWANAG, NANCY G.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="LUCIANO, BONIEBERT P.">
                     <img src="/assets/img/faculty/Luciano,Boniebert P.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">LUCIANO, BONIEBERT P.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="MABANSAG, JOSELITO">
                     <img src="/assets/img/faculty/MABANSAG, JOSELITO.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">MABANSAG, JOSELITO</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="MARFIL, ROWEE M.">
                     <img src="/assets/img/faculty/Marfil, Rowee M..jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">MARFIL, ROWEE M.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="MEDINA, JOHN DARREL J.">
                     <img src="/assets/img/faculty/MEDINA, JOHN DARREL J.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">MEDINA, JOHN DARREL J.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="ORTEGA, BLESSED LEN">
                     <img src="/assets/img/faculty/ORTEGA, BLESSED LEN.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">ORTEGA, BLESSED LEN</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="ORTEGA, NELIA A.">
                     <img src="/assets/img/faculty/ORTEGA,NELIA A.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">ORTEGA, NELIA A.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="PAEL, ANTHONY JUDE C.">
                     <img src="/assets/img/faculty/PAEL, ANTHONY JUDE C.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">PAEL, ANTHONY JUDE C.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="PEÑA, EDZEL G.">
                     <img src="/assets/img/faculty/PEÑA, EDZEL G.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">PEÑA, EDZEL G.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="POBLETE, ROXANNE E.">
                     <img src="/assets/img/faculty/POBLETE, ROXANNE E.JPG" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">POBLETE, ROXANNE E.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="RAMOS,CECIL L.">
                     <img src="/assets/img/faculty/RAMOS,CECIL L.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">RAMOS,CECIL L.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="RAPADA, APPLE M.">
                     <img src="/assets/img/faculty/RAPADA, APPLE M.JPG" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
-                  </div> <div class="col-6 col-md-4 col-lg-2">
+                  <p class="faculty-font fw-bold d-flex justify-content-center">RAPADA, APPLE M.</p>
+                  </div> 
+                  <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="SORIANO, EDRU LEANDRE R.">
                     <img src="/assets/img/faculty/SORIANO, EDRU LEANDRE R..JPG" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">SORIANO, EDRU LEANDRE R.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="SURIO, CECILIA B.">
                     <img src="/assets/img/faculty/SURIO, CECILIA B.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">SURIO, CECILIA B.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="TILA-ON,LUZ J.">
                     <img src="/assets/img/faculty/TILA-ON,LUZ J.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">TILA-ON,LUZ J.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="TIMAN, CLAUDETTE B.">
                     <img src="/assets/img/faculty/TIMAN, CLAUDETTE B.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">TIMAN, CLAUDETTE B.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="TOLENTINO, JOEL H.">
                     <img src="/assets/img/faculty/TOLENTINO, JOEL H.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">TOLENTINO, JOEL H.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="TONIDO, REYNANTE T.">
                     <img src="/assets/img/faculty/TONIDO, REYNANTE T.JPG" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">TONIDO, REYNANTE T.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="TURALBA, ROBERTO A.">
                     <img src="/assets/img/faculty/TURALBA, ROBERTO A.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">TURALBA, ROBERTO A.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                   <div class="gallery">
-                    <a href="#" data-title="TUVILLA, JOSEPHINE S.">
                   <img src="/assets/img/faculty/TUVILLA, JOSEPHINE S.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                </a>
                 </div>
+                <p class="faculty-font fw-bold d-flex justify-content-center">TUVILLA, JOSEPHINE S.</p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
                 <div class="gallery">
-                  <a href="#" data-title="VIADO, MARK JOSEPH A.">
                 <img src="/assets/img/faculty/VIADO, MARK JOSEPH A..png" class="img-fluid rounded-2 shadow-lg" alt="img1">
-              </a>
               </div>
+              <p class="faculty-font fw-bold d-flex justify-content-center">VIADO, MARK JOSEPH A.</p>
               </div>
                 </div>
               </div>
