--- a/ecc_non-teaching.html
+++ b/ecc_non-teaching.html
@@ -124,38 +124,33 @@
                 <div class="row gy-4 justify-content-center">
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="EMPAS, EUNICE A.">
                     <img src="/assets/img/non-teaching/EMPAS, EUNICE A.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">EMPAS, EUNICE A.</p>
                 </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="FERRANCO, MARTIN ZORELL L.">
                     <img src="/assets/img/non-teaching/FERRANCO,MARTIN ZORELL L  (5) copy.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">FERRANCO, MARTIN ZORELL L.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="HUNAT, KIMBERLY C.">
                     <img src="/assets/img/non-teaching/HUNAT, KIMBERLY C (4) copy.jpg" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">HUNAT, KIMBERLY C.</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="PEÑA, ROCELYN">
                     <img src="/assets/img/non-teaching/PENA, ROCELYN _08834_CORP.JPG" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">PEÑA, ROCELYN</p>
                   </div>
                   <div class="col-6 col-md-4 col-lg-2">
                     <div class="gallery">
-                      <a href="#" data-title="SORIANO, ROSALINA A.">
                     <img src="/assets/img/non-teaching/SORIANO, ROSALINA A (6)_CORP.JPG" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </a>
                   </div>
+                  <p class="faculty-font fw-bold d-flex justify-content-center">SORIANO, ROSALINA A.</p>
                   </div>
                 </div>
               </div>
