--- a/ecc_officials.html
+++ b/ecc_officials.html
@@ -145,7 +145,7 @@
                     <h4 class="mt-4 fw-bold">LOCAL: </h4>
                     <h4 class="fw-bold">Mrs. Rocelyn A. Peña</h4>
                     <p class="fw-bold">Department Head, Student Administration & Registration Services 
-                    <br><br><br><br><span class="fw-semibold">rapeña@earist.edu.ph</span></p>
+                    <br><br><br><br><br><span class="fw-semibold">rapeña@earist.edu.ph</span></p>
                   </div>
                 </div>
               </div>
@@ -195,7 +195,7 @@
                       <h4 class="mt-4 fw-bold">LOCAL: </h4>
                       <h4 class="fw-bold">Mrs. Catherine D. Dumpit</h4>
                       <p class="fw-bold">Program Chair, BSCS
-                      <br><br><br><br><br><span class="fw-semibold">cddumpit@earist.edu.ph</span></p>
+                      <br><br><br><br><br><br><span class="fw-semibold">cddumpit@earist.edu.ph</span></p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-3">
                       <h4 class="mt-4 fw-bold">LOCAL: </h4>
@@ -238,7 +238,7 @@
                       <h4 class="mt-4 fw-bold">LOCAL: </h4>
                       <h4 class="fw-bold">Dr. Yvonne O. Carandang</h4>
                       <p class="fw-bold">Program Chair, NSTP and SDRRMS <br>Program Chair, Ed. D. / MAEd
-                      <br><br><br><br><br><span class="fw-semibold">yocarandang@earist.edu.ph</span></p>
+                      <br><br><br><br><br><br><span class="fw-semibold">yocarandang@earist.edu.ph</span></p>
                     </div>
                   </div>
                 </div>
@@ -288,13 +288,13 @@
                       <h4 class="mt-4 fw-bold">LOCAL: </h4>
                       <h4 class="fw-bold">Mr. Eugene Paolo Z. Guades</h4>
                       <p class="fw-bold">Chief, Gender and Development
-                      <br><br><br><br><br><br><br><span class="fw-semibold">epzguades@earist.edu.ph</span></p>
+                      <br><br><br><br><br><br><br><br><span class="fw-semibold">epzguades@earist.edu.ph</span></p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-3">
                       <h4 class="mt-4 fw-bold">LOCAL: </h4>
                       <h4 class="fw-bold">Mr. John Darrel J. Medina</h4>
                       <p class="fw-bold">Administrative Assistant, Office of the Campus Administrator
-                      <br><br><br><br><br><br><span class="fw-semibold">jdjmedina@earist.edu.ph</span></p>
+                      <br><br><br><br><br><br><br><span class="fw-semibold">jdjmedina@earist.edu.ph</span></p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-3">
                       <h4 class="mt-4 fw-bold">LOCAL: </h4>
