--- a/index.html
+++ b/index.html
@@ -87,17 +87,51 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
+      <div id="hero-carousel" data-bs-interval="5000" class="container carousel carousel-fade" data-bs-ride="carousel">
+     
 
-      <img src="assets/img/facade.png" alt="" data-aos="fade-in">
-
-      <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
-        <div class="row d-flex justify-content-center">
-            <div class="col-12">
-              <h2>Welcome to EARIST - CAVITE CAMPUS</h2>
-              <p>(GENERAL ALVAREZ SCHOOL OF ARTS AND TRADES)</p>
+    <div class="carousel-item active">
+      <div class="carousel-container">
+        <img src="assets/img/facade.png" alt="" data-aos="fade-in">
+        <div class="carousel-details first-img">
+          <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
+            <div class="row d-flex justify-content-center">
+                <div class="col-12">
+                  <h2>Welcome to <br>EARIST - CAVITE CAMPUS</h2>
+                </div>
             </div>
         </div>
+      </div>
     </div>
+    </div>
+    
+
+   
+    <div class="carousel-item">
+      <div class="carousel-container">
+        <img src="assets/img/facade.png" alt="" data-aos="fade-in">
+          <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
+            <div class="row d-flex justify-content-center">
+                <div class="col-12">
+                  <h2>Welcome to</h2>
+                </div>
+            </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+    </a>
+
+    <a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+    </a>
+
+  </div>
+
 
     </section><!-- /Hero Section -->
 
