update hero carousel

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div class="carousel-item active">
       <div class="carousel-container">
-        <img src="assets/img/facade.png" alt="" data-aos="fade-in">
+        <img src="assets/img/facade/facade1.png" alt="" data-aos="fade-in">
         <div class="carousel-details first-img">
           <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
             <div class="row d-flex justify-content-center">
@@ -109,11 +109,10 @@
    
     <div class="carousel-item">
       <div class="carousel-container">
-        <img src="assets/img/facade.png" alt="" data-aos="fade-in">
+        <img src="assets/img/facade/facade1.png" alt="" data-aos="fade-in">
           <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
             <div class="row d-flex justify-content-center">
                 <div class="col-12">
-                  <h2>Welcome to</h2>
                 </div>
             </div>
         </div>
