center the logo and ecc for responsive screen

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 
     <div class="branding d-flex align-items-center">
-      <div class="container d-flex align-items-center justify-content-between">
+      <div class="container d-flex align-items-center justify-content-between mt-3">
           <!-- Logo on the left -->
-          <a href="index.html" class="d-flex align-items-center">
+          <a href="index.html" class="d-flex align-items-center mx-auto mx-lg-0">
               <img src="assets/img/earist.png" class="logo" alt="">
               <h1 class="fs-4 fw-bold mt-3 ms-2">EARIST - CAVITE CAMPUS</h1> 
           </a>
