change layout of program offerings

--- a/ecc_program.html
+++ b/ecc_program.html
@@ -108,21 +108,98 @@
     </header>
 
     <main class="main">
-      <section id="ecc-faculty" class="ecc-faculty section">
+      <section id="ecc-program" class="ecc-program section">
         <!-- Section Title -->
-        <div class="container officials position-relative dark-background" data-aos="fade-up">
-            <h1 class="fw-bold d-flex justify-content-center mb-2">PROGRAM OFFERINGS</h1>
-            <div class="container d-flex justify-content-center">
-                <div class="row gy-4 justify-content-center">
-                 <div class="col-12 col-md-6 col-lg-6">
-                    <img src="/assets/img/programs/UNDERGRADUATE_PROGRAM_OFFERINGS.png" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                </div>
-                  <div class="col-12 col-md-6 col-lg-6">
-                    <img src="/assets/img/programs/GRADUATE_PROGRAM_OFFERINGS.png" class="img-fluid rounded-2 shadow-lg" alt="img1">
-                  </div>
-                </div>
-              </div>
+        <div class="container mt-2 program officials" data-aos="fade-up">
+          <h1 class="fw-bold d-flex justify-content-center mb-2">PROGRAM OFFERINGS</h1>
+      <div class="container d-flex justify-content-center">
+        <div class="row gy-4 gx-5 justify-content-center">
+         <div class="col-12 col-md-6 col-lg-6">
+          <div class="d-flex align-items-center">
+            <img src="assets/img/earist.png" class="logo" alt="">
+            <h2 class="fs-3 fw-bold mt-3 ms-2">UNDERGRADUATE PROGRAMS</h2> 
+          </div>
+          <div class="ms-5">
+            <ul>
+          <li class="fs-6 fw-semibold">BACHELOR OF INDUSTRIAL TECHNOLOGY</li>
+          <p  class="fs-6 fw-semibold">MAJOR IN:</p>
+          <ul class="mb-3">
+            <li>AUTOMOTIVE TECHNOLOGY</li>
+            <li>DRAFTING TECHNOLOGY</li>
+            <li>ELECTRICAL TECHNOLOGY</li>
+            <li>ELECTRONICS TECHNOLOGY</li>
+            <li>FOOD TRADES</li>
+          </ul>
+          <li class="fs-6 fw-semibold">BACHELOR OF SCIENCE IN BUSINESS ADMINISTRATION</li>
+          <p  class="fs-6 fw-semibold">MAJOR IN:</p>
+          <ul class="mb-3">
+            <li>MARKETING MANAGEMENT</li>
+          </ul>
+          <li class="fs-6 fw-semibold">BACHELOR OF SCIENCE IN COMPUTER SCIENCE</li>
+          <li class="fs-6 fw-semibold">BACHELOR OF SCIENCE IN CRIMINOLOGY</li>
+          <li class="fs-6 fw-semibold">BACHELOR OF SCIENCE IN HOSPITALITY MANAGEMENT</li>
+          <li class="fs-6 fw-semibold">BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</li>
+          <li class="fs-6 fw-semibold">BACHELOR OF SCIENCE IN OFFICE ADMINISTRATION</li>
+          <li class="fs-6 fw-semibold">BACHELOR OF SCIENCE IN PSYCHOLOGY</li>
+          <li class="fs-6 fw-semibold">BACHELOR OF TECHNOLOGY AND LIVELIHOOD EDUCATION </li>
+          <p  class="fs-6 fw-semibold">MAJOR IN:</p>
+          <ul class="mb-3">
+            <li>HOME ECONOMICS</li>
+          </ul>
+        </ul>
+        </div>
+        </div>
+          <div class="col-12 col-md-6 col-lg-6">
+            <div class="d-flex align-items-center">
+              <img src="assets/img/earist_graduate.png" class="logo" alt="">
+              <h2 class="fs-3 fw-bold mt-3 ms-2">GRADUATE SCHOOL</h2> 
             </div>
+            <div class="ms-5">
+              <h5 class="ms-3 fw-bold">DOCTORAL PROGRAMS</h5>
+              <ul>
+            <li class="fs-6 fw-semibold">DOCTOR OF BUSINESS ADMINISTRATION (DBA)</li>
+            <li class="fs-6 fw-semibold">DOCTOR OF EDUCATION</li>
+            <p  class="fs-6 fw-semibold">MAJOR IN:</p>
+            <ul class="mb-3">
+              <li>EDUCATIONAL MANAGEMENT (ED.D-EM)</li>
+            </ul>
+            <li class="fs-6 fw-semibold">DOCTOR OF PHILOSOPHY</li>
+            <p  class="fs-6 fw-semibold">MAJOR IN:</p>
+            <ul class="mb-3">
+              <li>INDUSTRIAL PSYCHOLOGY (PHD.IP)</li>
+            </ul>
+            <li class="fs-6 fw-semibold">DOCTOR OF PUBLIC ADMINISTRATION (DPA)</li>
+          </div>
+          <div class="ms-5">
+            <h5 class="ms-3 fw-bold">MASTERAL PROGRAMS</h5>
+            <ul>
+          <li class="fs-6 fw-semibold">MASTER OF ARTS IN EDUCATION (MAED)</li>
+          <p  class="fs-6 fw-semibold">MAJOR IN:</p>
+          <ul class="mb-3">
+            <li>ADMINISTRATION AND SUPERVISION</li>
+            <li>GUIDANCE AND COUNCELING</li>
+            <li>SPECIAL EDUCATION</li>
+          </ul>
+          <li class="fs-6 fw-semibold">MASTER OF ARTS IN INDUSTRIAL EDUCATION</li>
+          <p  class="fs-6 fw-semibold">MAJOR IN:</p>
+          <ul class="mb-3">
+            <li>MAJOR IN HOTEL AND RESTAURANT MANAGEMENT</li>
+          </ul>
+          <li class="fs-6 fw-semibold">MASTER OF ARTS IN INDUSTRIAL PSYCHOLOGY</li>
+          <li class="fs-6 fw-semibold">MASTER OF ARTS IN TEACHING (MAT)</li>
+          <p  class="fs-6 fw-semibold">MAJOR IN:</p>
+          <ul class="mb-3">
+            <li>ELECTRONICS TECHNOLOGY</li>
+            <li>MATHEMATICS</li>
+            <li>SCIENCE</li>
+          </ul>
+          <li class="fs-6 fw-semibold">MASTER IN BUSINESS ADMINISTRATION</li>
+          <li class="fs-6 fw-semibold">MASTER IN PUBLIC ADMINISTRATION</li>
+          <li class="fs-6 fw-semibold">MASTER OF SCIENCE IN MATHEMATICS</li>
+        </div>
+          </div>
+        </div>
+      </div>
       </section>
       <!-- /Contact Section -->
     </main>
